Added ignore for algos config

--- a/Algos/config.json
+++ b/Algos/config.json
@@ -1,7 +1,7 @@
 {
 
     "uri" : "bolt://localhost:7687",
-    "username" : "agunkel",
-    "password" : "YoutubeLMAO"
+    "username" : "jack",
+    "password" : "Xfiles12345!!!!!!!!!!"
 
 }
