--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
 
     "uri" : "bolt://localhost:7687",
     "username" : "jack",
-    "password" : "Xfiles12345!!!!!!!!!!"
+    "password" : "Xfiles12345!!!!!"
 
 }
