--- a/Algos/config.json
+++ b/Algos/config.json
@@ -1,7 +1,7 @@
 {
 
     "uri" : "bolt://localhost:7687",
-    "username" : "jack",
-    "password" : "Xfiles12345!!!!!"
+    "username" : "kai",
+    "password" : "abcd1234"
 
 }
