--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 
     "uri" : "bolt://localhost:7687",
-    "username" : "kai",
-    "password" : "abcd1234"
+    "username" : "jack",
+    "password" : "Xfiles12345!!!!!"
 
 }
